working demo of billdesk

--- a/node-billdesk-demo/public/index.html
+++ b/node-billdesk-demo/public/index.html
@@ -67,11 +67,11 @@
   <h1>💳 Pay with BillDesk</h1>
 
   <form id="paymentForm">
-    <label for="amount">Amount (in paise)</label>
+    <label for="amount">Amount (in rupees)</label>
     <input
       id="amount"
       name="amount"
-      type="number"
+      type="string"
       required
       placeholder="e.g. 10000 for ₹100.00"
     />
